<resources>
    <string name="app_name">ScreamingBird</string>

    <!-- MainActivity -->
    <string name="btn_param">Paramètres</string>
    <string name="btn_jouer">Jouer</string>
    <string name="btn_creer_niveau">Créer un niveau</string>
    <string name="btn_scoreboard">Tableaux des scores</string>
    <string name="btn_about">A Propos</string>

    <!-- CreateurNiveauActivity -->
    <string name="title_createur_niveau">Créer un niveau</string>

    <!-- ScoreboardNiveauActivity -->
    <string name="title_scoreboard">Tableau des scores</string>

    <!-- SelecteurNiveauActivity -->
    <string name="title_selecteur_niveau">Choisir un niveau</string>

    <!-- JeuActivity -->
    <string name="title_jeu">Jeu en cours</string>
    <string name="btnSoundMoins">-</string>
    <string name="btnSoundPlus">+</string>

    <!-- FinDeJeuActivity -->
    <string name="title_fin_de_jeu">Partie terminée !</string>
    <string name="tv_nb_vies">Vies restantes :</string>
    <string name="tv_score">Score :</string>

    <!-- GameOverActivity -->
    <string name="title_game_over">Game Over !</string>
    <string name="tv_game_over">Perdu !</string>
    <string name="btn_retour_accueil">Retour à l\'accueil</string>

    <!-- About -->
    <string name="title_about">A Propos</string>
    <string name="tv_about">Réalisé en 1 journée dans le cadre du Challenge Android du Master 2 Développement Logiciel à Paul Sabatier</string>
    <string name="tv_hugo">Hugo CLEMENT</string>
    <string name="tv_thomas">Thomas GANTHIER</string>
    <string name="tv_chris">Christopher LOPES</string>
    <string name="tv_year">2018&#8211;2019</string>
    <string name="desc_dl">Logo MDL</string>
    <string name="desc_ups">Logo UPS</string>
</resources>
