<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHugo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_hugo"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/tvThomas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_thomas"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/tvChris"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_chris"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_year"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgDL"
                android:layout_width="354dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_dl"
                app:srcCompat="@drawable/logo_dl" />

            <ImageView
                android:id="@+id/imgUPS"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_ups"
                app:srcCompat="@drawable/logo_ups" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>